--- a/.github/linters/.eslintrc.yml
+++ b/.github/linters/.eslintrc.yml
@@ -43,6 +43,8 @@ rules:
     'i18n-text/no-en': 'off',
     'import/no-namespace': 'off',
     'no-console': 'off',
+    'no-dupe-class-members': 'off',
+    'no-shadow': 'off',
     'no-unused-vars': 'off',
     'prettier/prettier': 'error',
     'semi': 'off',
@@ -56,6 +58,7 @@ rules:
       ['error', { 'allowExpressions': true }],
     '@typescript-eslint/func-call-spacing': ['error', 'never'],
     '@typescript-eslint/no-array-constructor': 'error',
+    '@typescript-eslint/no-dupe-class-members': 'error',
     '@typescript-eslint/no-empty-interface': 'error',
     '@typescript-eslint/no-explicit-any': 'error',
     '@typescript-eslint/no-extraneous-class': 'error',
@@ -65,6 +68,7 @@ rules:
     '@typescript-eslint/no-namespace': 'error',
     '@typescript-eslint/no-non-null-assertion': 'warn',
     '@typescript-eslint/no-require-imports': 'error',
+    '@typescript-eslint/no-shadow': 'warn',
     '@typescript-eslint/no-unnecessary-qualifier': 'error',
     '@typescript-eslint/no-unnecessary-type-assertion': 'error',
     '@typescript-eslint/no-unused-vars': 'error',
