--- a/package.json
+++ b/package.json
@@ -66,7 +66,10 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@actions/tool-cache": "^2.0.1",
+    "semver": "^7.5.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
