--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Setup .NET project
         run: |
           dotnet new console -o Console
-          dotnet add Console package LethalCompany.GameLibs.Steam -Version 45.0.2-alpha.1
+          dotnet add Console package LethalCompany.GameLibs.Steam --version 45.0.2-alpha.1
           dotnet restore
 
       - name: Test Local Action
