--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,7 @@ jobs:
       - name: Setup .NET project
         run: |
           dotnet new console -o Console
+          dotnet nuget add source "https://nuget.bepinex.dev/v3/index.json"
           dotnet add Console package LethalCompany.GameLibs.Steam --version 45.0.2-alpha.1
           dotnet restore
 
